Make backend API more rest-like
